form plus jolies

--- a/pfirst/src/app/new-courses/new-courses.component.html
+++ b/pfirst/src/app/new-courses/new-courses.component.html
@@ -12,7 +12,7 @@
 
           <div class="form-group">
             <label for="user"><h2>Prénom</h2></label>
-            <input type="text" id="user" class="form-control" formControlName="user">
+            <input type="text" id="user" class="form-control" formControlName="user" placeholder="ex: Dupont">
           </div>
 
         </div>
@@ -21,7 +21,7 @@
         <div class="form-group">
           <div class="jumbotron" id="formulaire">
             <div class="form-group">
-              <label for="datejour"><h2>Selectionnez une Date et une Heure</h2>
+              <label for="datejour"><h2>Selectionnez une Date et une Heure <span style="color:red">*</span></h2>
               </label>
               <p>Jour</p>
               <input type="date" id="datejour" class="form-control" formControlName="datejour" [min]="this.date" >
@@ -34,7 +34,7 @@
           <!--#############ACCOMPAGNE######################-->
           <div class="jumbotron" id="formulaire">
             <div class="form-group">
-              <label for="accompagne"><h2>Souhaitez vous que l'on vous accompagne ?</h2></label>
+              <label for="accompagne"><h2>Souhaitez vous que l'on vous accompagne ? <span style="color:red">*</span></h2></label>
               <select id="accompagne" class="form-control" formControlName="accompagne">
                 <option value="Oui">Oui !</option>
                 <option value="Non">Non !</option>
@@ -46,7 +46,7 @@
           <!--#############BUDGET######################-->
           <div class="jumbotron" id="formulaire">
             <div class="input-group mb-3">
-              <label for="budget"><h2>Quel est le montant de votre budget ?</h2></label>
+              <label for="budget"><h2>Quel est le montant de votre budget ?<span style="color:red">*</span></h2></label>
 
               <span class="input-group-text">€</span>
               <input type="text" id="budget" class="form-control" formControlName="budget">
@@ -58,7 +58,7 @@
           <!--#############LISTE DE COURSES######################-->
           <div class="jumbotron" id="formulaire">
             <div class="form-group">
-              <label for="liste"><h2>Ajoutez un élément à la liste de course</h2></label>
+              <label for="liste"><h2>Ajoutez un élément à la liste de course<span style="color:red">*</span></h2></label>
 
               <form (ngSubmit)="ajouterListe(liste)" #liste="ngForm">
                 <table>
@@ -96,63 +96,65 @@
               </form>
             </div>
           </div>
-          <label for ="ou" ><h2>Ou se ferra le service ? </h2></label>
-              <div class="col-sm-8 col-sm-offset-2">
-              <div class="form-group">
-                <table width="100%" border="1" cellspacing="1" cellpadding="5">
-                  <tr>
-                  
-                  <td> <div *ngIf="add===false  ">
-                    <button  type="button" id = "location-button"  (click)= "add=true;loca=false" class="btn btn-secondary" >Avec votre adress</button>
-                  </div>
-                  <div *ngIf="add===true && loca ===false ">
-                    <label for ="city" ><h3>Ville</h3></label>
-                <input type="text" id="city" class="form-control" formControlName="city">
-                <label for ="adress" ><h3>Adresse</h3></label>
-                <input type="text" id="adress" class="form-control" formControlName="adress">
-                  </div>
-                  
-                  </td>
-                  <td>
-                    <span class="badge badge-secondary">OU</span>
-                  </td>
-                  <td>
-                    <div *ngIf="loca ===false ">
-                      <button  type="button" id = "location-button"  (click)= "loca=true; add=false" class="btn btn-secondary" >Avec votre geolocalisation</button>
-                    </div>
-                    <div *ngIf="add===false && loca ===true ">
-                      <label for ="location" ><h3>Votre localisation</h3></label>
-                  <button  type="button" id = "location-button"  (click)= "getLocation()" class="btn btn-secondary" >Appuyer</button>
-
-                  
-                    </div>
-                  </td>
-                  
-                  
-                  </tr>
-                  <td></td>
-                  <td></td>
-                  <td>
-                    <div *ngIf="map"> <app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" ></app-mini-map></div>
-                  </td>
-            
-                  </table>
+          <div class="form-group">
               
+              
+               
+            <label for ="ou" ><h2>Ou se ferra le service ? <span style="color:red">*</span></h2></label>
+          
+
+              <table width="100%" border="1" cellspacing="1" cellpadding="5" class="geoloc">
+                
+                <tr>
+                
+                <td> <div *ngIf="add===false  ">
+                  <button  type="button" id = "location-button"  (click)= "add=true;loca=false" class="btn btn-secondary" style= "width:100px;height: 100px;" >Avec votre adress</button>
+                </div>
+                <div *ngIf="add===true && loca ===false ">
+                  <label for ="city" ><h3>Ville</h3></label>
+                <br>
+              <input type="text" id="city" class="form-control" formControlName="city" placeholder="ex: Paris" >
+              <br>
+              <label for ="adress" ><h3>Adresse</h3></label>
+              <br>
+              <input type="text" id="adress" class="form-control" formControlName="adress" placeholder="ex: avenue des Champs Elysee" style= "width:200px;height: 100%;">
+                </div>
+                
+                </td>
+                <td>
+                  <span class="badge badge-secondary" style= "width:50px;height: 50px; text-align:center" ><br> <br>OU</span>
+                </td>
+                <td>
+                  <div *ngIf="loca ===false ">
+                    <button  type="button" id = "location-button"  (click)= "loca=true; add=false" class="btn btn-secondary" >Avec votre geolocalisation</button>
+                  </div>
+                  <div *ngIf="add===false && loca ===true ">
+                    <label for ="location" ><h3>Votre localisation</h3></label>
+                <button  type="button" id = "location-button"  (click)= "getLocation()" class="btn btn-secondary" >Appuyer</button>
+
+                
+                  </div>
+                </td>
                 
                 
-                  
-                
-              </div>
-              </div>
+                </tr>
+                <td></td>
+                <td></td>
+                <td>
+                  <div *ngIf="map"> <app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" ></app-mini-map></div>
+                </td>
+              
+                </table>
+          </div>
+
 
           <!--#############COMMENTAIRES######################-->
           <div class="jumbotron" id="formulaire">
             <div class="form group">
-              <label for="description"><h2>Veuillez indiquer un petit texte qui aidera a mieux coller a vos
-                attentes.</h2></label>
+              <label for="description"><h2>Commentaires ? <span style="color:red">*</span></h2></label>
               <!--<input type="text" id="description" class="form-control" formControlName="description"> -->
               <textarea class="form-control" aria-label="With textarea" id="description" class="form-control"
-                        formControlName="description"></textarea>
+                        formControlName="description" placeholder="ex: Vous pourrez venir chez moi"></textarea>
             </div>
           </div>
           <br>
