--- a/pfirst/src/app/new-menage/new-menage.component.html
+++ b/pfirst/src/app/new-menage/new-menage.component.html
@@ -4,16 +4,16 @@
         <table align="center">
 
           <!--#############PRENOM######################-->
-          <div class="col-sm-8 col-sm-offset-2">
+          <div class="col-sm-8 ">
             <form [formGroup]="menageForm" (ngSubmit)="onSubmitForm()" id="form">
               <div class="form-group">
                 <label for ="user" ><h2>Prénom</h2></label>
-                <input type="text" id="user" class="form-control" formControlName="user">
+                <input type="text" id="user" class="form-control" formControlName="user" placeholder="ex: Dupont">
               </div>
 
               <!--#############DISPO######################-->
               <div class= "form-group">
-                <label for="datejour"> <h2>Date et heure</h2></label>
+                <label for="datejour"> <h2>Date et heure <span style="color:red">*</span></h2></label>
                 <p>Jour</p>
               <input type="date" id="datejour" class="form-control" formControlName="datejour" [min]="this.date" >
               <label for="dateheure">Heure</label>
@@ -23,35 +23,40 @@
               
               
               <div class="input-group mb-3">
-                <label for="surface"><h2>Quel est la surface de l'endroit qu'il faut nettoyer ?</h2></label>
+                <label for="surface"><h2>Surface a nettoyer ? <span style="color:red">*</span></h2>
+                  </label>
                 <input type="text" id="surface" class="form-control" formControlName="surface">
-                <div class="input-group-append"><span class="input-group-text">m²</span></div>
+                <div class="input-group-append"><span class="input-group-text" style= "height:38px">m²</span></div>
               </div>
 
               <div class="form-group">
-                <label for ="salle" ><h2>Quel salle necesite d'etre nettoyer </h2></label>
-                <input type="text" id="salle"  class="form-control" formControlName="salle" >
+                <label for ="salle" ><h2>Quel salle ? <span style="color:red">*</span></h2></label>
+                <input type="text" id="salle"  class="form-control" formControlName="salle" placeholder="ex: Cuisine">
               </div>
 
-              <label for ="ou" ><h2>Ou se ferra le service ? </h2></label>
-              <div class="col-sm-8 col-sm-offset-2">
+              <label for ="ou" ><h2>Ou se ferra le service ? <span style="color:red">*</span></h2></label>
+              
               <div class="form-group">
-                <table width="100%" border="1" cellspacing="1" cellpadding="5">
+                <table width="100%" border="1" cellspacing="1" cellpadding="5" class="geoloc">
+                  
                   <tr>
                   
                   <td> <div *ngIf="add===false  ">
-                    <button  type="button" id = "location-button"  (click)= "add=true;loca=false" class="btn btn-secondary" >Avec votre adress</button>
+                    <button  type="button" id = "location-button"  (click)= "add=true;loca=false" class="btn btn-secondary" style= "width:100px;height: 100px;" >Avec votre adress</button>
                   </div>
                   <div *ngIf="add===true && loca ===false ">
                     <label for ="city" ><h3>Ville</h3></label>
-                <input type="text" id="city" class="form-control" formControlName="city">
+                  <br>
+                <input type="text" id="city" class="form-control" formControlName="city" placeholder="ex: Paris" >
+                <br>
                 <label for ="adress" ><h3>Adresse</h3></label>
-                <input type="text" id="adress" class="form-control" formControlName="adress">
+                <br>
+                <input type="text" id="adress" class="form-control" formControlName="adress" placeholder="ex: avenue des Champs Elysee" style= "width:200px;height: 100%;">
                   </div>
                   
                   </td>
                   <td>
-                    <span class="badge badge-secondary">OU</span>
+                    <span class="badge badge-secondary" style= "width:50px;height: 50px; text-align:center" ><br> <br>OU</span>
                   </td>
                   <td>
                     <div *ngIf="loca ===false ">
@@ -72,20 +77,20 @@
                   <td>
                     <div *ngIf="map"> <app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" ></app-mini-map></div>
                   </td>
-            
+                
                   </table>
               
                 
                 
                   
                 
-              </div>
+              
               </div>
 
 
               <!--#############LISTE DE MATERIEL######################-->
             <div class= "form-group">
-                <label for="liste"><h2>Liste du materiel qui est a votre disposition</h2></label>
+                <label for="liste"><h2>Liste du materiel qui est a votre disposition </h2></label>
 
                 <form (ngSubmit)="ajouterListe(liste)" #liste="ngForm">
                   <table>
@@ -94,7 +99,7 @@
                     </tr>
                     <tr>
                       <td><input type="text" id="liste" name="liste_materiel" ngModel></td>
-                      <td><button  class="btn btn-secondary">Ajouter</button></td>
+                      <td><button  class="btn btn-secondary" >Ajouter</button></td>
                     </tr>
                     <tr>
                       <ul class="list-group">
@@ -124,10 +129,10 @@
 
 
               <div class="form group">
-                <label for ="description"> <h2>Veuillez indiquer un petit texte qui aidera a mieux coller a vos attentes.</h2></label>
+                <label for ="description"> <h2>Commentaires ? <span style="color:red">*</span></h2></label>
                 <!--<input type="text" id="description" class="form-control" formControlName="description"> -->
                 <textarea class="form-control" aria-label="With textarea" id="description" class="form-control"
-                        formControlName="description"></textarea>
+                        formControlName="description" placeholder="ex: Vous pourrez venir chez moi"></textarea>
               </div>
               <br>
 
@@ -139,15 +144,4 @@
 
         </table>
     </div>
-<<<<<<< HEAD
-
-
-  
-  
-  
-=======
-  </div>
-
-
->>>>>>> master
 
