--- a/pfirst/src/app/new-accompage/new-accompage.component.html
+++ b/pfirst/src/app/new-accompage/new-accompage.component.html
@@ -5,15 +5,15 @@
 
           <!--#############PRENOM######################-->
           <div class="col-sm-8 col-sm-offset-2">
-            <form [formGroup]="accompagneForm" (ngSubmit)="onSubmitForm()" id="form">
+            <form [formGroup]="accompagneForm" (ngSubmit)="onSubmitForm()" id="form" >
               <div class="form-group">
                 <label for ="user" ><h2>Prénom</h2></label>
                 <input type="text" id="user" class="form-control" formControlName="user">
               </div>
 
               <div class= "form-group">
-                <label for="kind"><h2>S'agit-il d'un accompagnement ponctuel ou regulier ? </h2></label>
-                <select id="kind" class="form-control" formControlName="kind">
+                <label for="kind"><h2>Ce sera pontuel ou regulier ?<span style="color:red">*</span> </h2></label>
+                <select id="kind" class="form-control" formControlName="kind" required>
                   <option value="ponctuel">Ponctuel</option>
                   <option value="regulier">Regulier si c' est possible</option>
                 </select>
@@ -21,84 +21,81 @@
 
               <!--#############DISPO######################-->
               <div class= "form-group">
-                <label for="quand"> <h2>Sur quelle plage horaire cela se passerait-il ? </h2></label>
+                <label for="quand"><h2>Quand se deroulera votre demande ? <span style="color:red">*</span></h2>
+                </label>
                 <label for="quand1">Debut</label>
-                <input type="time" id="quand1" class="form-control" formControlName="quand1" >
+                <input type="time" id="quand1" class="form-control" formControlName="quand1" required>
                 <label for="quand2">Fin</label>
-                <input type="time" id="quand2" class="form-control" formControlName="quand2" >
+                <input type="time" id="quand2" class="form-control" formControlName="quand2"required >
               </div>
 
               <div class= "form-group">
-                <p>Quel jour ?</p>
+                <p>Quel jour ? <span style="color:red">*</span></p>
               <input type="date" id="datejour" class="form-control" formControlName="datejour" [min]="this.date" >
               </div>
 
-              <div class="col-sm-8 col-sm-offset-2">
+              
                 <div class="form-group">
-                <label for ="local" ><h2>Ou shouaitez vous que l'on vous accompagne ?</h2></label>
               
               
                
-                <label for ="ou" ><h2>Ou se ferra le service ? </h2></label>
+                <label for ="ou" ><h2>Ou se ferra le service ? <span style="color:red">*</span></h2></label>
               
-                <table width="100%" border="1" cellspacing="1" cellpadding="5">
-                  <tr>
-                  
-                  <td> <div *ngIf="add===false  ">
-                    <button  type="button" id = "location-button"  (click)= "add=true;loca=false" class="btn btn-secondary" >Avec votre adress</button>
-                  </div>
-                  <div *ngIf="add===true && loca ===false ">
-                    <label for ="city" ><h3>Ville</h3></label>
-                <input type="text" id="city" class="form-control" formControlName="city">
-                <label for ="adress" ><h3>Adresse</h3></label>
-                <input type="text" id="adress" class="form-control" formControlName="adress">
-                  </div>
-                  
-                  </td>
-                  <td>
-                    <span class="badge badge-secondary">OU</span>
-                  </td>
-                  <td>
-                    <div *ngIf="loca ===false ">
-                      <button  type="button" id = "location-button"  (click)= "loca=true; add=false" class="btn btn-secondary" >Avec votre geolocalisation</button>
-                    </div>
-                    <div *ngIf="add===false && loca ===true ">
-                      <label for ="location" ><h3>Votre localisation</h3></label>
-                  <button  type="button" id = "location-button"  (click)= "getLocation()" class="btn btn-secondary" >Appuyer</button>
 
-                  
+                  <table width="100%" border="1" cellspacing="1" cellpadding="5" class="geoloc">
+                    
+                    <tr>
+                    
+                    <td> <div *ngIf="add===false  ">
+                      <button  type="button" id = "location-button"  (click)= "add=true;loca=false" class="btn btn-secondary" style= "width:100px;height: 100px;" >Avec votre adress</button>
                     </div>
-                  </td>
+                    <div *ngIf="add===true && loca ===false ">
+                      <label for ="city" ><h3>Ville</h3></label>
+                    <br>
+                  <input type="text" id="city" class="form-control" formControlName="city" placeholder="ex: Paris" >
+                  <br>
+                  <label for ="adress" ><h3>Adresse</h3></label>
+                  <br>
+                  <input type="text" id="adress" class="form-control" formControlName="adress" placeholder="ex: avenue des Champs Elysee" style= "width:200px;height: 100%;">
+                    </div>
+                    
+                    </td>
+                    <td>
+                      <span class="badge badge-secondary" style= "width:50px;height: 50px; text-align:center" ><br> <br>OU</span>
+                    </td>
+                    <td>
+                      <div *ngIf="loca ===false ">
+                        <button  type="button" id = "location-button"  (click)= "loca=true; add=false" class="btn btn-secondary" >Avec votre geolocalisation</button>
+                      </div>
+                      <div *ngIf="add===false && loca ===true ">
+                        <label for ="location" ><h3>Votre localisation</h3></label>
+                    <button  type="button" id = "location-button"  (click)= "getLocation()" class="btn btn-secondary" >Appuyer</button>
+  
+                    
+                      </div>
+                    </td>
+                    
+                    
+                    </tr>
+                    <td></td>
+                    <td></td>
+                    <td>
+                      <div *ngIf="map"> <app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" ></app-mini-map></div>
+                    </td>
                   
-                  
-                  </tr>
-                  <td></td>
-                  <td></td>
-                  <td>
-                    <div *ngIf="map"> <app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" ></app-mini-map></div>
-                  </td>
-            
-                  </table>
-              
-                
-                
-                  
-                
-              
-                  
-                
+                    </table>
               </div>
-              </div>
+
       
 
               <div class="form group">
-                <label for ="description"> <h2>Veuillez indiquer un petit texte qui aidera a mieux coller a vos attentes.</h2></label>
+                <label for ="description"> <h2>Commentaires ? <span style="color:red">*</span></h2></label>
                 <!--<input type="text" id="description" class="form-control" formControlName="description"> -->
-                <textarea class="form-control" aria-label="With textarea" id="description" class="form-control" formControlName="description"></textarea>
+                <textarea class="form-control" aria-label="With textarea" id="description" class="form-control" formControlName="description" required></textarea>
               </div>
               <br>
 
-              <button type="submit" class="btn btn-primary">Soumettre</button>
+              <button type="submit" class="btn btn-primary" >Soumettre</button>
             </form>
 
           </div>
