--- a/pfirst/src/app/new-cuisine/new-cuisine.component.html
+++ b/pfirst/src/app/new-cuisine/new-cuisine.component.html
@@ -6,12 +6,13 @@
                 <form [formGroup]="cuisineForm" (ngSubmit)="onSubmitForm()" id="form">
                   <div class="form-group">
                     <label for ="user" ><h2>Prénom</h2></label>
-                    <input type="text" id="user" class="form-control" formControlName="user">
+                    <input type="text" id="user" class="form-control" formControlName="user" placeholder="ex: Dupont">
                   </div>
 
 
                   <div class= "form-group">
-                    <label for="datejour"> <h2>Date et heure</h2></label>
+                    <label for="datejour"> <h2>Date et heure<span style="color:red">*</span></h2></label>
+                    <br>
                     <label for="datejour">Jour</label>
                   <input type="date" id="datejour" class="form-control" formControlName="datejour" [min]="this.date" >
                   <label for="dateheure">Heure</label>
@@ -22,7 +23,7 @@
 
 
                   <div class= "form-group">
-                    <label for="sur_place"><h2>Voulez-vous que la cuisine soit faite chez vous ou que l'on vous l'emporte ?</h2></label>
+                    <label for="sur_place"><h2>Chez vous ou a emporter ? <span style="color:red">*</span></h2></label>
                     <select id="sur_place" class="form-control" formControlName="sur_place">
                       <option value="Oui">Sur place, chez moi vous etes le bienvenue</option>
                       <option value="Non">Je prefere que l'on me l'emporte</option>
@@ -30,47 +31,58 @@
                   </div>
 
 
-                  <label for ="ou" ><h2>Ou se ferra le service ? </h2></label>
+                  <label for ="ou" ><h2>Ou se ferra le service ? <span style="color:red">*</span></h2></label>
 
-                <table width="100%" border="1" cellspacing="1" cellpadding="5">
-                  <tr>
-
-                  <td> <div *ngIf="add===false  ">
-                    <button  type="button" id = "location-button"  (click)= "add=true;loca=false" class="btn btn-secondary" >Avec votre adress</button>
+                  <div class="form-group">
+                    <table width="100%" border="1" cellspacing="1" cellpadding="5" class="geoloc">
+                      
+                      <tr>
+                      
+                      <td> <div *ngIf="add===false  ">
+                        <button  type="button" id = "location-button"  (click)= "add=true;loca=false" class="btn btn-secondary" style= "width:100px;height: 100px;" >Avec votre adress</button>
+                      </div>
+                      <div *ngIf="add===true && loca ===false ">
+                        <label for ="city" ><h3>Ville</h3></label>
+                      <br>
+                    <input type="text" id="city" class="form-control" formControlName="city" placeholder="ex: Paris" >
+                    <br>
+                    <label for ="adress" ><h3>Adresse</h3></label>
+                    <br>
+                    <input type="text" id="adress" class="form-control" formControlName="adress" placeholder="ex: avenue des Champs Elysee" style= "width:200px;height: 100%;">
+                      </div>
+                      
+                      </td>
+                      <td>
+                        <span class="badge badge-secondary" style= "width:50px;height: 50px; text-align:center" ><br> <br>OU</span>
+                      </td>
+                      <td>
+                        <div *ngIf="loca ===false ">
+                          <button  type="button" id = "location-button"  (click)= "loca=true; add=false" class="btn btn-secondary" >Avec votre geolocalisation</button>
+                        </div>
+                        <div *ngIf="add===false && loca ===true ">
+                          <label for ="location" ><h3>Votre localisation</h3></label>
+                      <button  type="button" id = "location-button"  (click)= "getLocation()" class="btn btn-secondary" >Appuyer</button>
+    
+                      
+                        </div>
+                      </td>
+                      
+                      
+                      </tr>
+                      <td></td>
+                      <td></td>
+                      <td>
+                        <div *ngIf="map"> <app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" [zoom]="12" style= "width:100px;height: 100px; text-align:center"></app-mini-map></div>
+                      </td>
+                    
+                      </table>
+                  
+                    
+                    
+                      
+                    
+                  
                   </div>
-                  <div *ngIf="add===true && loca ===false ">
-                    <label for ="city" ><h3>Ville</h3></label>
-                <input type="text" id="city" class="form-control" formControlName="city">
-                <label for ="adress" ><h3>Adresse</h3></label>
-                <input type="text" id="adress" class="form-control" formControlName="adress">
-                  </div>
-
-                  </td>
-                  <td>
-                    <span class="badge badge-secondary">OU</span>
-                  </td>
-                  <td>
-                    <div *ngIf="loca ===false ">
-                      <button  type="button" id = "location-button"  (click)= "loca=true; add=false" class="btn btn-secondary" >Avec votre geolocalisation</button>
-                    </div>
-                    <div *ngIf="add===false && loca ===true ">
-                      <label for ="location" ><h3>Votre localisation</h3></label>
-                  <button  type="button" id = "location-button"  (click)= "getLocation()" class="btn btn-secondary" >Appuyer</button>
-
-
-                    </div>
-                  </td>
-
-
-                  </tr>
-                  <td></td>
-                  <td></td>
-                  <td>
-                    <div *ngIf="map"> <app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" ></app-mini-map></div>
-                  </td>
-
-                  </table>
-
 
 
 
@@ -80,7 +92,7 @@
 
 
                   <div class= "form-group">
-                    <label for="type_plat"><h2>Quel type de plat souhaitez vous que la personne prepare ?</h2></label>
+                    <label for="type_plat"><h2>Quel type de plat souhaitez vous que la personne prepare ? <span style="color:red">*</span></h2></label>
                     <select id="type_plat" class="form-control" formControlName="type_plat">
                       <option value="entree">Entree</option>
                       <option value="plat">Plat</option>
@@ -91,9 +103,9 @@
                   </div>
 
                   <div class="form group">
-                    <label for ="description"> <h2>Veuillez indiquer un petit texte qui aidera a mieux coller a vos attentes.</h2></label>
+                    <label for ="description"> <h2>Commentaires ? <span style="color:red">*</span></h2></label>
                     <!--<input type="text" id="description" class="form-control" formControlName="description"> -->
-                    <textarea class="form-control" aria-label="With textarea" id="description" class="form-control" formControlName="description"></textarea>
+                    <textarea class="form-control" aria-label="With textarea" id="description" class="form-control" formControlName="description" placeholder="ex: Vous pourrez venir chez moi"></textarea>
                   </div>
                   <br>
 
