--- a/pfirst/src/app/new-menage/new-menage.component.css
+++ b/pfirst/src/app/new-menage/new-menage.component.css
@@ -2,7 +2,13 @@
 table,
 td {
   border: 0px solid #333;
+  width:  50%;
+  
+  
 }
+
+
+
 
 :host-context(.theme-dark) #jumb{
   background-color: grey;
