--- a/pfirst/src/app/new-cuisine/new-cuisine.component.html
+++ b/pfirst/src/app/new-cuisine/new-cuisine.component.html
@@ -109,7 +109,10 @@
                   </div>
                   <br>
 
-                  <button type="submit" class="btn btn-primary">Soumettre</button>
+                  <button type="submit" class="btn btn-primary" [disabled]="cuisineForm.invalid">Soumettre</button>
+                  <i><p *ngIf="!cuisineForm.valid" style="color:gray">Veuillez remplir tout les champs <span style="color:red">*</span>
+                  </p></i>
+                  
                 </form>
 
               </div>
