maps plus grande

--- a/pfirst/src/app/new-cuisine/new-cuisine.component.html
+++ b/pfirst/src/app/new-cuisine/new-cuisine.component.html
@@ -72,7 +72,7 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <div *ngIf="map"> <app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" [zoom]="12" style= "width:100px;height: 100px; text-align:center"></app-mini-map></div>
+                        <div *ngIf="map" style= "width:250px;height: 250px"> <app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" ></app-mini-map></div>
                       </td>
                     
                       </table>
