last but not least

--- a/pfirst/src/app/new-menage/new-menage.component.html
+++ b/pfirst/src/app/new-menage/new-menage.component.html
@@ -42,7 +42,7 @@
                   <tr>
 
                   <td> <div *ngIf="add===false  ">
-                    <button  type="button" id = "location-button"  (click)= "add=true;loca=false" class="btn btn-secondary" style= "width:100px;height: 100px;" >Avec votre adress</button>
+                    <button  type="button" id = "location-button"  (click)= "add=true;loca=false;map=false" class="btn btn-secondary" style= "width:100px;height: 100px;" >Avec votre adress</button>
                   </div>
                   <div *ngIf="add===true && loca ===false ">
                     <label for ="city" ><h3>Ville</h3></label>
