--- a/pfirst/src/app/service-activity/service-activity.component.html
+++ b/pfirst/src/app/service-activity/service-activity.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-3 rounded-lg rounded-lg" style="width:100%;">
+<div id="card" class="card mb-3 rounded-lg rounded-lg" style="width:100%;">
   <div class="row no-gutters">
     <div class="col-md-2">
       <img style="cursor: pointer" (click)="router.navigate(['propose/'+id])" [src]="serviceImage" class="card-img-top"
